# ecs_history

./: .clang-format  CMakeLists.txt  README.md  change_applier.cpp  change_applier.hpp  change_mixin.hpp  change_reactive_mixin.hpp  history.drawio  main.cpp  performance.csv  static_entity.hpp
include/: change.hpp  change_applier.hpp  change_mixin.hpp  change_reactive_mixin.hpp  commit.hpp  monitor.hpp  registry.hpp  static_entity.hpp
include/ecs_history/: change.hpp  change_applier.hpp  change_set.hpp  commit.hpp  entity_version.hpp  history.hpp  static_entity.hpp  storage_monitor.hpp
include/ecs_history/component/: component_context.hpp  default_component.hpp
include/ecs_history/entt/: change_mixin.hpp
include/ecs_history/gather_strategy/: change_mixin.hpp  change_reactive_mixin.hpp  gather_strategy.hpp  monitor.hpp  registry.hpp
include/ecs_history/gather_strategy/reactive/: monitor.hpp  reactive_gather_strategy.hpp
include/ecs_history/serialization/: change.hpp  component.hpp  serialization.hpp
src/: change.cpp  change_applier.cpp  change_set.cpp  commit.cpp  entity_version.cpp  static_entity.cpp
src/gather_strategy/reactive/: monitor.cpp  reactive_gather_strategy.cpp
src/serialization/: component.cpp
test/: history_test.cpp  performance_test.cpp
